--- a/main.html
+++ b/main.html
@@ -6,10 +6,24 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body style="background-color: yellow; text-align: center;">
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	
+	<div>
+		<h1 id="f1" style="margin: 20px 0;">Flowers photos</h1>
+		<p style="font-size: 16px;">
+			Flowers are beautiful creations of nature that come in many colors and shapes.
+		</p>
+	</div>
+
+	<div>
+		<h1 id="f2" style="margin: 20px 0;">Roses pictures</h1>
+		<p style="font-size: 16px;">
+			Roses are one of the most popular flowers and symbolize love and affection.
+		</p>
+	</div>
+
+	<script type="text/javascript" src="./script.js"></script>
 
 </body>
 
